--- a/Visualizing_Cluster/CoyPU_communities.ipynb
+++ b/Visualizing_Cluster/CoyPU_communities.ipynb
@@ -236,7 +236,7 @@
    "source": [
     "def button_cui1_clicked(parm):\n",
     "    select_cluster = module_globals['select_cluster']\n",
-    "    dropdown_cluster.options = select_cluster(dict_country[grid[0, 0].value], path_model_th_cls)\n",
+    "    dropdown_cluster.options = select_cluster(dict_country[grid[0, 0].value], path_model_th_cls, content)\n",
     "\n",
     "grid[0, 1].on_click(button_cui1_clicked)"
    ]
@@ -294,7 +294,7 @@
     "        clear_output(wait=True)\n",
     "#         graph_json = create_json_to_cytoscape(cls)\n",
     "        create_graph_cytoscape = module_globals['create_graph_cytoscape']\n",
-    "        display(create_graph_cytoscape(path_model_th_cls, dropdown_cluster.value, prediction, replacement_map))\n",
+    "        display(create_graph_cytoscape(path_model_th_cls, dropdown_cluster.value, prediction, replacement_map, content))\n",
     "\n",
     "button.on_click(on_button_clicked)"
    ]
@@ -403,16 +403,8 @@
     "                bbox=dict(boxstyle=\"round\", fc=\"w\"), fontsize=14\n",
     "                )\n",
     "\n",
-    "# def get_cluster(country, path_model_th_cls):\n",
-    "#     entries = os.listdir(path_model_th_cls)\n",
-    "#     for name in entries:\n",
-    "#         cls = pd.read_csv(path_model_th_cls + name, delimiter=\"\\t\", header=None)\n",
-    "#         cls.columns = ['s']\n",
-    "#         if country in cls.s.to_list():\n",
-    "#             return cls\n",
-    "        \n",
-    "def get_cluster(country, path_model_th_cls):\n",
-    "    content = 'https://raw.githubusercontent.com/SDM-TIB/CoyPU_communities_demo/main/'\n",
+    "      \n",
+    "def get_cluster(country, path_model_th_cls, content):\n",
     "#     entries = os.listdir(path_model_th_cls)\n",
     "    get_entries = module_globals['get_entries']\n",
     "    entries = get_entries(path_model_th_cls)\n",
