--- a/Visualizing_Cluster/CoyPU_communities.ipynb
+++ b/Visualizing_Cluster/CoyPU_communities.ipynb
@@ -156,7 +156,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84ef0dba0ec4475d88cab98fca0eb046",
+       "model_id": "682142ace7e440b1ad302e4ff845a598",
        "version_major": 2,
        "version_minor": 0
       },
@@ -209,7 +209,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b67146c41f4348a0bb3e6c8862b618d6",
+       "model_id": "c81710574be84a09a9b674e0618b8b1b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,7 +258,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01f11be30a7b498da80460ecbe90cab4",
+       "model_id": "904ccec0d7db4e4a94ffaa9772adf3ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,7 +272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd9d9c8d2c8b44f2a0d065a8fb0a9520",
+       "model_id": "995d30f008d940388a36b5c981028286",
        "version_major": 2,
        "version_minor": 0
       },
@@ -480,7 +480,7 @@
     "    with output_3:\n",
     "        clear_output(wait=True)\n",
     "#         cls = get_cluster(dict_country[grid_c2[0, 0].value], path_model_th_cls_c2)\n",
-    "        country_cls, country_idx = get_cluster(dict_country[grid_c2[0, 0].value], path_model_th_cls_c2)\n",
+    "        country_cls, country_idx = get_cluster(dict_country[grid_c2[0, 0].value], path_model_th_cls_c2, content)\n",
     "        df = pd.merge(indicator_val, country_cls, on='s')\n",
     "#         'Industry (including construction) value added (% of GDP)', 'GDP per capita (current LCU)', 'Gini index'\n",
     "        df = df.loc[df.p.isin(['Gross national expenditure (current US$)',\n",
